# snippets

./: README.md  find_subdomains_and_create_certs.md  firefox_nightly_installer.sh  multipleStages.groovy  proxmox_snapshot_rollback_vm_after_shutdown.sh  shutdown_script.md  tibia_bot.sh  vnc_server_killer.sh
aws/: aws_configuration.md
aws/configuration/: readme.md
bitwarden/mail/: readme.md
ddclient/ovh/: readme.md
docker/compose/project-a/: makefile  readme
docker/compose/project-a/help/: docker.sh  git.sh  log.sh  misc.sh  readme
docker/compose/project-a/keycloak/: docker-compose.yml
docker/compose/project-a/keycloak/app/: docker
docker/compose/project-a/mysql/: docker-compose.yml
docker/compose/project-a/nginx/: docker-compose.yml
docker/compose/project-a/nginx/app/: docker  nginx.conf
docker/compose/project-b/: makefile
docker/compose/project-b/apps/adminer/: docker-compose.yml
docker/compose/project-b/apps/haproxy/: dockerfile
docker/compose/project-b/apps/keycloak/: docker-compose.yml
docker/compose/project-b/maketools/: docker.sh
gitlab/api-collection/: readme.md
gitlab/invoke-pipeline/: invoke-pipeline.sh  invokePipeline.sh  readme.md
guacamole/: readme.md
haproxy/ditto/: readme.md
iredmail/postfix/: readme.md
iscsi/: readme.md
keycloak/guacamole/: client.json  readme.md
keycloak/sogo/: readme.md
notes/: btrfs.md
nvidia/: nvidia_offloading.md
nvidia/nvidia-offloading/: readme.md
proxmox/: proxmox_pci_passthrough.md  proxmox_pci_passthrough_zfs.md
proxmox/AutoVmHostName/: AutoVmHostName.service  AutoVmHostName.sh  dnsmasq.conf
qemu/qemu-windows/: readme.md  spinn-up.cmd
scripts/: AddDnsHost.service  AddDnsHost.sh  add_vm_host.ps1  gpu_passthrough.sh  letsencrypt_haproxy_renew_certificates.sh  proxmox_helper.sh  rds_single_app_instance.ps1  renew_certificates.sh  search_active_subdomains.sh  wol_service.md
templates/cpp/: CMakeLists.txt
templates/cpp/sources/: CMakeLists.txt  main.cpp
templates/cpp/sources/managers/: CMakeLists.txt  PiecesManager.hpp  PiecesManager.hxx
templates/cpp/sources/pieces/: CMakeLists.txt  Primitive.cpp  Primitive.hpp  Primitive.hxx  Shader.cpp  Shader.hpp  Shader.hxx
templates/cpp/sources/states/: CMakeLists.txt  State.hpp  StateLogo.cpp  StateLogo.hpp  StateManager.cpp  StateManager.hpp  StateMenu.cpp  StateMenu.hpp  StateSwitcher.cpp  StateSwitcher.hpp
templates/cpp/sources/utils/: CMakeLists.txt  CommonIncludes.hpp  FileParser.cpp  FileParser.hpp  PrimitiveRenderer.cpp  PrimitiveRenderer.hpp  Settings.cpp  Settings.hpp  SharedResources.cpp  SharedResources.hpp
templates/cpp/tests/: CMakeLists.txt  TestConfig_0.cfg  TestConfig_1.cfg  main.cpp  test.sh
windows/ocx-registration-less/: readme.md
windows/ocx-registrationless/: readme.md
(+21 files in other folders)
